<resources>
    <string name="app_name">Pet Owner</string>

    <string name="preference_file_key">ip.team13.petowner.PREFERENCE_FILE_KEY</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="invite_code_optional">Invite code (optional)</string>
    <string name="add_activity">Add Activity</string>
    <string name="select_pet">Select pet</string>

    <!--  Main screen  -->
    <string name="tab_home">Home</string>
    <string name="tab_activities">Activities</string>
    <string name="tab_group">Group</string>
    <string name="tab_analytics">Analytics</string>

    <!--  Home screen  -->
    <string name="leaderboard_weekly_title">Weekly Leaderboard</string>
    <string name="leaderboard_vip">VIP</string>
    <string name="leaderboard_basic">Basic</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_new_activity">Add a new activity</string>
    <string name="login">Login</string>
    <string name="hello">Hello,&#160;</string>
    <string name="level">Lvl&#160;</string>
    <string name="empty_name">Your profile</string>

    <!-- User Profile screen -->
    <string name="name_hint">Your name</string>
    <string name="buy_vip">Buy VIP for 349 tokens</string>
    <string name="vip_duration">VIP duration</string>
    <string name="multiplier">Your experience is multiplied by</string>

    <!-- Add activity screen   -->
    <string name="add_activity_title">Title</string>
    <string name="add_activity_description">Description</string>
    <string name="add_activity_repeat">Repeat</string>
    <string name="add_activity_reminder">Reminder</string>
    <string name="add_activity_due_time">Due Time</string>

    <!-- Misc -->
    <string name="save">save</string>
    <string name="happiness">Your pet\'s current happiness</string>
    <string name="pet_profile">Pet profile</string>
    <string name="pet_name">Name</string>
    <string name="pet_age">Age</string>
    <string name="pet_weight">Weight</string>
    <string name="pet_species">Species</string>
    <string name="pet_race">Race</string>

    <!-- Cost tracker-->
    <string name="cost_item_amount">%1$.2f RON</string>


    <!-- Pet profile   -->
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="age">Age (years)</string>
    <string name="weight">Weight (kg)</string>
    <string name="species">Species</string>
    <string name="race">Race</string>
    <string name="kg">(kg)</string>
    <string name="years">year(s)</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="tips_amp_info"><![CDATA[Tips & Info]]></string>
    <string name="choose">Choose</string>
    <string name="show_all">Show all</string>
    <string name="see_tips">See tips</string>
    <string name="update">Update</string>
</resources>